{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 262,
  "lineage": "7b3c92d3-67a3-a1bf-211c-5c7609092ddd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cred_card_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4ba1f3689d5709",
            "association_id": "eipassoc-0e4959fa1b8d1239a",
            "domain": "vpc",
            "id": "eipalloc-05e4ba1f3689d5709",
            "instance": "i-0c9d98f2322b64097",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01fc2d543bff8feb4",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-54-236-186-107.compute-1.amazonaws.com",
            "public_ip": "54.236.186.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cred_card_web_eip_0"
            },
            "tags_all": {
              "Name": "cred_card_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cred_card_web",
            "aws_key_pair.cred_card_kp",
            "aws_security_group.cred_card_web_sg",
            "aws_subnet.cred_card_public_subnet",
            "aws_vpc.cred_card_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.cred_card_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cred_card_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f57ffe8bd04fa66d",
            "arn": "arn:aws:ec2:us-east-1:088492177964:instance/i-0c9d98f2322b64097",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9d98f2322b64097",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cred_card_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fc2d543bff8feb4",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-54-236-186-107.compute-1.amazonaws.com",
            "public_ip": "54.236.186.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa9bb0621796926c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a5cb0f4674bc259",
            "tags": {
              "Name": "cred_card_web_0"
            },
            "tags_all": {
              "Name": "cred_card_web_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0080efb7e9f31f867"
            ]
          },
          "dependencies": [
            "aws_key_pair.cred_card_kp",
            "aws_security_group.cred_card_web_sg",
            "aws_subnet.cred_card_public_subnet",
            "aws_vpc.cred_card_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.cred_card_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cred_card_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:internet-gateway/igw-0491c48a88b5c12cf",
            "id": "igw-0491c48a88b5c12cf",
            "owner_id": "088492177964",
            "tags": {
              "Name": "cred_card_igw"
            },
            "tags_all": {
              "Name": "cred_card_igw"
            },
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "dependencies": [
            "aws_vpc.cred_card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cred_card_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:route-table/rtb-0dcafd21fc9738dfc",
            "id": "rtb-0dcafd21fc9738dfc",
            "owner_id": "088492177964",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cred_card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cred_card_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:route-table/rtb-049dfa43efffb1e26",
            "id": "rtb-049dfa43efffb1e26",
            "owner_id": "088492177964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0491c48a88b5c12cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cred_card_igw",
            "aws_vpc.cred_card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a200a2fac60a9eba",
            "route_table_id": "rtb-0dcafd21fc9738dfc",
            "subnet_id": "subnet-0e4eff32138410b2d"
          },
          "dependencies": [
            "aws_route_table.cred_card_private_rt",
            "aws_subnet.cred_card_private_subnet",
            "aws_vpc.cred_card_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c36dc195f2aee681",
            "route_table_id": "rtb-0dcafd21fc9738dfc",
            "subnet_id": "subnet-0f793ea1bb2fb1c70"
          },
          "dependencies": [
            "aws_route_table.cred_card_private_rt",
            "aws_subnet.cred_card_private_subnet",
            "aws_vpc.cred_card_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077de04f03d74b15b",
            "route_table_id": "rtb-049dfa43efffb1e26",
            "subnet_id": "subnet-04a5cb0f4674bc259"
          },
          "dependencies": [
            "aws_internet_gateway.cred_card_igw",
            "aws_route_table.cred_card_public_rt",
            "aws_subnet.cred_card_public_subnet",
            "aws_vpc.cred_card_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cred_card_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:security-group/sg-04cb8fee0972ee209",
            "description": "Security group for cred_card databases",
            "egress": [],
            "id": "sg-04cb8fee0972ee209",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0080efb7e9f31f867"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cred_card_db_sg",
            "name_prefix": "",
            "owner_id": "088492177964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cred_card_db_sg"
            },
            "tags_all": {
              "Name": "cred_card_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.cred_card_web_sg",
            "aws_vpc.cred_card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cred_card_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:security-group/sg-0080efb7e9f31f867",
            "description": "Security group for cred_card web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0080efb7e9f31f867",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "187.19.177.73/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cred_card_web_sg",
            "name_prefix": "",
            "owner_id": "088492177964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cred_card_web_sg"
            },
            "tags_all": {
              "Name": "cred_card_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.cred_card_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cred_card_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:subnet/subnet-0e4eff32138410b2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4eff32138410b2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088492177964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cred_card_private_subnet_0"
            },
            "tags_all": {
              "Name": "cred_card_private_subnet_0"
            },
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "dependencies": [
            "aws_vpc.cred_card_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:subnet/subnet-0f793ea1bb2fb1c70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f793ea1bb2fb1c70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088492177964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cred_card_private_subnet_1"
            },
            "tags_all": {
              "Name": "cred_card_private_subnet_1"
            },
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "dependencies": [
            "aws_vpc.cred_card_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cred_card_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:subnet/subnet-04a5cb0f4674bc259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a5cb0f4674bc259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088492177964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cred_card_public_subnet_0"
            },
            "tags_all": {
              "Name": "cred_card_public_subnet_0"
            },
            "vpc_id": "vpc-022266ad68e414cc8"
          },
          "dependencies": [
            "aws_vpc.cred_card_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cred_card_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:088492177964:vpc/vpc-022266ad68e414cc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0652c7a31d91b9b50",
            "default_route_table_id": "rtb-0ab1932dbb47b8587",
            "default_security_group_id": "sg-0025a483144bc4b05",
            "dhcp_options_id": "dopt-0eecc45efa85f7eef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022266ad68e414cc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab1932dbb47b8587",
            "owner_id": "088492177964",
            "tags": {
              "Name": "cred_card_vpc"
            },
            "tags_all": {
              "Name": "cred_card_vpc"
            }
          }
        }
      ]
    }
  ]
}